# RealTimeCaptioning

./: .flake8  .gitignore  MakeFile  README.md  constraint.txt  main.py  package-lock.json  pyproject.toml  requirements.txt  setup.py
data/processed/: transcricao.txt  transcricao_atual.txt
docs/: diagrama.puml
src/: captura_audio.py  main.py  transcricao.py  utils.py
src/audio/: capturer.py
src/core/: app.py
tests/: test_captura_audio.py  test_transcricao.py
tests/unit/: test_capturer.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  activate.bat
